# api/DTO/config.go
@@ -1,6 +1,0 @@
-package dto
-
-type ConfigDTO struct {
-	Name  string `json:"name",omitempty`
-	Value string `json:"value,omitempty"`
-}
